Remove compilerArgs for Java preview features